<resources>
    <string name="app_name">Lines Driver</string>
    <string name="title_activity_home_main">HomeMain</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Trips</string>
    <string name="menu_slideshow">Contact</string>
    <string name="menu_tools">Notification</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_Trips">Trips</string>
    <string name="menu_Contract">Contract</string>
    <string name="menu_Notification">Notification</string>
    <string name="menu_Help">Help</string>
    <string name="menu_Terms">Terms and conditions</string>
    <string name="menu_Logout">Logout</string>
    <string name="title_activity_maps">Map</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Vehicle">Vehicle</string>
    <string name="firebase_path">locations</string>
</resources>
